microservices/complete-guide/blog/infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-reges: 'true'
    # This entire annotation section is what's going to help the ingress controller understand that
    # we are trying to feed it some routing rules, so the ingress controller is going to continuously
    # scan all the different objects or all the different config files.  So we're throwing into our
    # cluster and it's going to try to find one that has this exact annotation right here.

spec:
  # Rules is going to have all the different routing rules that we want to apply to teach the
  # ingress controller how to take incoming traffic and route them off to our different pods.
  rules:
    - host: posts.com
      http:
        # take incoming traffic and send it off to our post service.
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-srv
                port:
                  number: 4000
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-svr
                port:
                  number: 4002
          - path: /posts/?(.*)/comments
            pathType: Prefix
            backend:
              service:
                name: comments-srv
                port:
                  number: 4001
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 4001
